<resources>
    <string name="app_name">Design-Pattern</string>

    <string name="CreationalPattern">创建型模式</string>
    <string name="SimpleFactoryPattern">简单工厂模式(SimpleFactoryPattern)</string>
    <string name="FactoryPattern">工厂模式(FactoryPattern)</string>
    <string name="AbstractFactoryPattern">抽象工厂模式(AbstractFactoryPattern)</string>
    <string name="BuilderPattern">建造者模式(BuilderPattern)</string>
    <string name="PrototypePattern">原型模式(PrototypePattern)</string>

    <string name="StructuralPattern">结构型模式</string>

    <string name="BehaviorPattern">行为型模式</string>
    <string name="clear">清空</string>
</resources>
