<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/CreationalPattern"
            style="@style/TextViewStyle" />

        <Button
            android:id="@+id/btn_simple_factory"
            android:text="@string/SimpleFactoryPattern"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/btn_factory"
            android:text="@string/FactoryPattern"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/btn_abstact_factory"
            android:text="@string/AbstractFactoryPattern"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/btn_builder"
            android:text="@string/BuilderPattern"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/btn_prototype"
            android:text="@string/PrototypePattern"
            style="@style/ButtonStyle" />

        <TextView
            android:text="@string/StructuralPattern"
            style="@style/TextViewStyle" />


        <TextView
            android:text="@string/BehaviorPattern"
            style="@style/TextViewStyle" />
    </LinearLayout>

</ScrollView>